# Donald

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONSOLIDATION.md  DASHBOARD.md  DEPLOYMENT.md  DEVELOPMENT.md  DISTRIBUTION_ROADMAP.md  Dockerfile  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_EXAMPLES.md  MCP_QUICK_START.md  PRODUCT.md  README.md  VERIFY.md  config.yaml  demo.py  demo_confirm.py  demo_handoff.py  demo_isolation.py  demo_live_roster.py  demo_routing.py  demo_runtime.py  docker-compose.yml  donald.db  donald.py  fly.toml  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-server.txt  requirements-voice.txt  (+6 more)
.github/workflows/: auto-merge-claude-branches.yml  ci.yml  self-knowledge.yml
agent_factory/: cli.py  models.py  runtime.py  search.py
agent_factory/migrations/: 001_init.sql
agent_factory/tools/: __init__.py  builtins.py
archive/: README.md  north-star.md
archive/aether-orb/: package-lock.json  scene.js
archive/docs/: MCP_ARCHITECTURE_REFERENCE.md  MCP_INTEGRATION_INDEX.md  MCP_INTEGRATION_PLAN.md  README_MCP_INTEGRATION.md
archive/tests/: helpers.py  test_checker.py  test_memory.py  test_parser.py  test_pipeline_and_approval.py  test_research.py  test_serving_and_agent.py  test_state_machine.py  test_tier1_tokens.py  test_tier2_scaffold.py  test_tier3_composer.py  test_tier4_catalog.py  test_tier7_references.py  test_tools.py  test_wren.py
archive/tests-unit/: test_donald_tool.py
archive/wren/: AGENT.md
backend/: README.md  __init__.py  agent_tools.py  api.py  billing.py  crypto.py  db.py  embeddings.py  gateway_auth.py  memory.py  memory_service.py  models.py  oauth.py  passwords.py  provider_api.py  repo.py  summarize.py  updates.py
backend/migrations/: 001_init.sql  002_memory.sql  003_billing.sql  004_usage.sql
config/: config.yaml
configs/presets/: deep-research.yaml  morning-ops.yaml  trading-monitor.yaml
context/: _manifest.toml  donald-supabase-schema.md
context/self/: .donald-allowlist.txt  (+1 more)
desktop/: .gitignore  README.md  donald.sh  install-linux.sh  install-macos.sh  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 00-MASTERPLAN.md  MCP_SETUP.md  SKILL_DISCOVERY.md  branch-auto-merge.md  cloud-postgres-migration.md  demo-spacex-dossier.md  incident-runbook.md  prompt-caching-audit.md  secrets-inventory.md  voice-desktop-assistant.md
donald/: AGENT.md  __init__.py  agent.py  app.py  brain.py  cli.py  config.py  context.py  conversation.py  daemon.py  killswitch.py  listener.py  memory.py  persona.py  personality.py  proactive.py  safety.py  tools.py  voice.py
donald_data/: donald.db
examples/: .env.example  db.py  fastapi_agent.py
frontend/: index.html  manifest.webmanifest  scene.js  sw.js  voice.js
gateway/: .env.example  README.md  __init__.py  config.py  dashboard_state.py  orchestrator.py  server.py
js/: agents.js  audio.js  background.js  clap.js  constellation.js  donald.js  main.js  orb.js  rings.js  states.js  terminal.js
orchestrator/: __init__.py  agent.py  confirmation.py  events.py  handoff.py  llm.py  orchestrator.py  registry.py  runtime.py  tools.py  watch.py
prism/: agent.py  config.py  docs.py  fonts.py  image_gen.py  scaffold.py
scripts/: 01-harden-droplet.sh  02-setup-postgres.sh  03-migrate-data.sh  check_config.py  com.donald.listener.plist  install-self-knowledge-hook.sh  verify_supabase.py
security/: __init__.py  anomaly.py  approval.py  audit.py  auth_ratelimit.py  bearer_auth.py  cve_scan.py  http_headers.py  injection_gate.py  killswitch.py  log_redact.py  startup_guard.py  subprocess_env.py
server/: app.py  auth.py  brain.py  config.py  db.py  deepgram.py  elevenlabs.py  llm.py  main.py  segment_stream.py  tts.py
skills/: _metadata.yaml
tests/: conftest.py  test_agent_core.py  test_agent_tools.py  test_anomaly.py  test_approval.py  test_audit.py  test_auth.py  test_auth_ratelimit.py  test_backend.py  test_backend_ratelimit.py  test_bearer_auth.py  test_billing.py  test_brain.py  test_computer.py  test_config.py  test_core.py  test_cve_scan.py  test_dashboard.py  test_db.py  test_example_fastapi.py  test_gateway.py  test_gateway_auth.py  test_generators.py  test_grounding.py  test_hermes.py  test_http_headers.py  test_injection_gate.py  test_jarvis.py  test_killswitch.py  test_listener.py  test_log_redact.py  test_memory.py  test_memory_api.py  test_memory_integration.py  test_memory_store.py  test_memory_upgrades.py  test_oauth.py  test_openrouter.py  test_personality.py  test_proactive.py  (+14 more)
web/: .gitignore  README.md  next.config.js  package.json  tsconfig.json
webui/: app.js  index.html  styles.css
wren/: agent.py  app.py  cli.py  config.py  heartbeat.py  llm.py  mailer.py  memory.py
(+130 files in other folders)
