[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# NOTE: this repo hosts several independent experiments (security/, donald/,
# src/trillion/, prism/). A single root pyproject can only describe one package;
# the previous root file declared [project] twice (invalid TOML), so this is
# scoped to Prism. Other projects build/run from their own package dirs.
[project]
name = "donald"
version = "0.1.0"
description = "Donald — a Jarvis-style personal AI operator: the cocky personality brain, framework-agnostic security primitives, and a gateway that connects the local Hermes agent and voice into one system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agent", "llm", "assistant", "security", "hermes", "voice"]
# Core packages (security, donald personality) are pure standard library and
# stay dependency-free. The gateway's runtime deps live in the optional
# `gateway` extra so the libraries still drop into any stack untouched.
dependencies = []

[project.optional-dependencies]
# The connective-tissue server (gateway/): brain + Hermes + voice.
gateway = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
# Tooling the CVE scanner shells out to (not imported); install where you scan.
scan = ["pip-audit"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
packages = ["security", "donald", "gateway", "gateway.connectors"]

[tool.pytest.ini_options]
# asyncio_mode=auto for the trillion suite; "." and "src" on the path so the
# root packages (gateway/donald/security) and src/trillion both import without
# an editable install.
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
name = "prism-design-agent"
version = "0.1.0"
description = "Prism — a head-of-design sub-agent that composes award-quality Next.js mockups."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
agent = ["anthropic>=0.40"]
images = ["google-genai>=0.3"]
serving = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0"]

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools]
packages = ["prism"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
