[package]
name = "donald-os"
version = "0.1.0"
description = "Donald OS — your personal AI team, on the desktop"
authors = ["Donald"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "donald_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
